--- a/app/src/main/res/layout/fragment_to__do_.xml
+++ b/app/src/main/res/layout/fragment_to__do_.xml
@@ -25,11 +25,12 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/scanner_img"
-            android:layout_marginBottom="30dp"
-            android:layout_marginRight="30dp"
+            android:id="@+id/scan"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/scanner_img" />
 
     </RelativeLayout>
 
