--- a/app/src/main/res/layout/activity_dasbord.xml
+++ b/app/src/main/res/layout/activity_dasbord.xml
@@ -6,17 +6,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+<!--    <com.google.android.material.appbar.MaterialToolbar-->
+<!--        android:id="@+id/appbar"-->
+<!--        android:background="@color/black"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="?attr/actionBarSize"-->
+<!--        app:menu="@menu/menu">-->
+
+<!--    -->
+
+
+<!--    </com.google.android.material.appbar.MaterialToolbar>-->
+
     <RelativeLayout
-        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:id="@+id/appbar"
         android:background="@color/black">
-
         <ImageView
             android:layout_width="50dp"
-            android:padding="5dp"
             android:layout_height="match_parent"
             android:layout_marginRight="4dp"
+            android:padding="5dp"
             android:src="@drawable/g_logo" />
 
         <ImageView
@@ -41,20 +52,25 @@
         <ImageView
             android:layout_width="30dp"
             android:padding="5dp"
+            android:id="@+id/search"
             android:layout_height="match_parent"
             android:layout_marginRight="5dp"
             android:layout_toLeftOf="@id/notification"
             android:src="@drawable/search" />
 
 
+
     </RelativeLayout>
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        android:layout_below="@+id/appbar"
-        app:tabIndicatorColor="@color/pink"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black">
+        android:layout_below="@+id/appbar"
+        android:background="@color/black"
+        app:tabIndicatorColor="@color/pink"
+        app:tabTextColor="@color/white">
+
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
