--- a/app/src/main/res/layout/activity_select_recipienttype.xml
+++ b/app/src/main/res/layout/activity_select_recipienttype.xml
@@ -27,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
+            android:textColor="@color/white"
             android:text="Select Recipient Type" />
 
 
