--- a/app/src/main/res/layout/recipient_reylerview.xml
+++ b/app/src/main/res/layout/recipient_reylerview.xml
@@ -6,22 +6,15 @@
     android:orientation="vertical">
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:elevation="5dp"
-            app:cardBackgroundColor="#EFEFEF"
-            app:cardCornerRadius="10dp">
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="Buyer"
+        app:cornerRadius="5dp"
+        app:rippleColor="@color/pink"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="center"
-                android:text="Buyer"
-                android:textColor="@color/black"/>
-        </androidx.cardview.widget.CardView>
 
     
 </LinearLayout>
