--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,30 +46,49 @@
                     android:layout_marginTop="80dp"
                     android:src="@drawable/ic_logo" />
 
-
-                <com.google.android.material.textfield.TextInputLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:layout_marginLeft="17dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginRight="17dp"
-                    android:layout_marginBottom="20dp"
-                    android:hint="Login ID"
-                    app:boxBackgroundColor="@color/white"
-                    app:hintTextColor="#3F465D">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp">
 
-                    <EditText
-                        android:id="@+id/loginId"
+
+
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="-17dp"
-                        android:layout_marginTop="10dp"
-                        android:singleLine="true"
-                        android:textColor="@color/gray_black"
-                        android:textColorHint="@color/black"
-                        android:textStyle="bold" />
+                        android:layout_height="70dp"
+                        android:layout_marginLeft="17dp"
+                        android:layout_marginRight="17dp"
+                        android:layout_marginBottom="20dp"
+                        android:hint="Login ID"
+                        app:boxBackgroundColor="@color/white"
+                        app:hintTextColor="#3F465D">
 
-                </com.google.android.material.textfield.TextInputLayout>
+
+                        <EditText
+                            android:id="@+id/loginId"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="-17dp"
+                            android:layout_marginTop="10dp"
+                            android:singleLine="true"
+                            android:textColor="@color/gray_black"
+                            android:textColorHint="@color/black"
+                            android:textStyle="bold" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.github.ybq.android.spinkit.SpinKitView
+                        android:id="@+id/spin_kit"
+                        style="@style/SpinKitView.Circle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_gravity="center"
+                        android:visibility="gone"
+                        app:SpinKit_Color="@color/loadercolor" />
+
+                </RelativeLayout>
 
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -97,17 +116,17 @@
 
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/buttonLogin"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_marginLeft="17dp"
                     android:layout_marginTop="20dp"
-                    app:cornerRadius="5dp"
                     android:layout_marginRight="17dp"
                     android:background="@drawable/button_bg"
                     android:text="Login"
-                    android:id="@+id/buttonLogin"
                     android:textAllCaps="false"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    app:cornerRadius="5dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -115,8 +134,8 @@
                     android:layout_marginTop="20dp"
                     android:text="Forgot Password?"
                     android:textAlignment="center"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -124,17 +143,14 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
                         android:layout_marginTop="20dp"
+                        android:layout_marginBottom="30dp"
                         android:text="@string/need_help"
                         android:textAlignment="center"
-                        android:layout_marginBottom="30dp"
-                        android:textStyle="bold"
-                        android:layout_alignParentBottom="true"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
                 </RelativeLayout>
-
-
-
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
