--- a/app/src/main/res/layout/activity_order_info.xml
+++ b/app/src/main/res/layout/activity_order_info.xml
@@ -81,6 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="SGO10632060179"
+                android:id="@+id/id"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
@@ -90,6 +91,7 @@
                 android:layout_marginTop="10dp"
                 android:text="Blk 401 Hougang Avenue 10, #07-1164,530401"
                 android:textColor="@color/white"
+                android:id="@+id/address"
                 android:textSize="12dp" />
 
 
@@ -133,6 +135,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="Tel: +6592236540"
+                android:id="@+id/mobile"
                 android:textColor="@color/black"
                 android:textSize="18dp"
                 android:textStyle="bold" />
@@ -168,6 +171,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="12:38 08-09-2021"
+                android:id="@+id/deliveredTime"
                 android:textColor="@color/black"
                 android:textSize="18dp"
                 android:textStyle="bold" />
@@ -211,6 +215,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+
         android:layout_marginRight="20dp"
         app:cardCornerRadius="8dp">
 
@@ -218,6 +223,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
+            android:id="@+id/addmark"
             android:orientation="vertical">
 
             <TextView
