--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -2,22 +2,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="@color/black"
-    android:layout_height="match_parent"
-   >
+    android:layout_height="match_parent">
+
 
     <com.budiyev.android.codescanner.CodeScannerView
         android:id="@+id/scanner_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:autoFocusButtonColor="@android:color/white"
+        app:autoFocusButtonVisible="true"
+        app:flashButtonColor="@android:color/white"
         app:flashButtonVisible="true"
-        app:frameAspectRatioHeight="1"
-        android:visibility="gone"
         app:frameAspectRatioWidth="1"
+        app:frameColor="@android:color/white"
         app:frameCornersRadius="0dp"
         app:frameCornersSize="50dp"
+        app:frameAspectRatioHeight="1"
         app:frameSize="0.75"
         app:frameThickness="2dp"
-        app:maskColor="#77000000" />
+        app:maskColor="#77000000"/>
 
 
     <com.google.android.material.button.MaterialButton
@@ -28,12 +31,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="30dp"
         android:textColor="@color/white"
+        android:id="@+id/manualInput_Btn"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="60dp"
         android:text="Manual Input"
         android:textAllCaps="false"
-
-        android:visibility="gone"
         app:cornerRadius="5dp" />
 
 
