--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -89,20 +89,17 @@
 
         </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="20dp"
-            android:background="#E8ECF5" />
 
 
         <com.github.gcacace.signaturepad.views.SignaturePad
-            android:id="@+id/mSignaturePad"
+            android:id="@+id/signature_pad"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginTop="25dp"
-            android:background="#f3f5fa"
-            app:penColor="@android:color/black" />
+            android:layout_marginTop="20dp"
+            android:background="#E8ECF5"
+            app:penColor="@android:color/black"
+            />
+
 
         <TextView
             android:layout_width="match_parent"
@@ -111,13 +108,15 @@
             android:text="Please confirm you have accepted your delivery (no damage), by signing below"
             android:textColor="#9A9A9A" />
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:gravity="bottom"
             android:orientation="horizontal">
+
+
+
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/resign"
