--- a/app/src/main/res/layout/recipient_reylerview.xml
+++ b/app/src/main/res/layout/recipient_reylerview.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="Buyer"
+        android:singleLine="true"
         app:cornerRadius="5dp"
         app:rippleColor="@color/pink"/>
 
