--- a/app/src/main/res/layout/bottom_nav.xml
+++ b/app/src/main/res/layout/bottom_nav.xml
@@ -206,6 +206,7 @@
                     android:layout_weight="1"
                     android:outlineSpotShadowColor="@color/pink"
                     android:text="Failed"
+                    android:id="@+id/faild"
                     android:textAllCaps="false"
                     android:textColor="@color/pink"
                     app:strokeColor="@color/pink" />
