--- a/app/src/main/res/layout/activity_dasbord.xml
+++ b/app/src/main/res/layout/activity_dasbord.xml
@@ -1,29 +1,29 @@
-
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <com.google.android.material.appbar.MaterialToolbar-->
-<!--        android:id="@+id/appbar"-->
-<!--        android:background="@color/black"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="?attr/actionBarSize"-->
-<!--        app:menu="@menu/menu">-->
+    <!--    <com.google.android.material.appbar.MaterialToolbar-->
+    <!--        android:id="@+id/appbar"-->
+    <!--        android:background="@color/black"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="?attr/actionBarSize"-->
+    <!--        app:menu="@menu/menu">-->
 
-<!--    -->
+    <!--    -->
 
 
-<!--    </com.google.android.material.appbar.MaterialToolbar>-->
+    <!--    </com.google.android.material.appbar.MaterialToolbar>-->
 
     <RelativeLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/appbar"
         android:background="@color/black">
+
         <ImageView
+            android:id="@+id/summary"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:layout_marginRight="4dp"
@@ -50,35 +50,58 @@
             android:src="@drawable/notification" />
 
         <ImageView
-            android:layout_width="30dp"
-            android:padding="5dp"
             android:id="@+id/search"
+            android:layout_width="30dp"
             android:layout_height="match_parent"
             android:layout_marginRight="5dp"
             android:layout_toLeftOf="@id/notification"
+            android:padding="5dp"
             android:src="@drawable/search" />
-
 
 
     </RelativeLayout>
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/appbar"
-        android:background="@color/black"
-        app:tabIndicatorColor="@color/pink"
-        app:tabTextAppearance="@style/MyCustomTextAppearance1"
-        app:tabTextColor="@color/white">
+        android:layout_height="match_parent"
+        android:layout_below="@id/appbar">
 
-    </com.google.android.material.tabs.TabLayout>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tabLayout"
-        android:layout_centerInParent="true"
-      />
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            app:tabIndicatorColor="@color/pink"
+            app:tabTextAppearance="@style/MyCustomTextAppearance1"
+            app:tabTextColor="@color/white">
+
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tabLayout"
+            android:layout_centerInParent="true" />
+
+
+        <pl.droidsonroids.gif.GifTextView
+            android:id="@+id/spin_kits"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/loder"
+            android:gravity="center"
+            android:visibility="gone" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_recylerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tabLayout" />
+
+    </RelativeLayout>
+
 </RelativeLayout>
