--- a/app/src/main/res/layout/activity_dilverconfirm.xml
+++ b/app/src/main/res/layout/activity_dilverconfirm.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
             android:text="SG010632060179"
+            android:id="@+id/id"
             android:textColor="@color/white" />
     </LinearLayout>
 
@@ -35,12 +36,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="50dp"
-            android:src="@drawable/check_icon" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="84125-payment-successfully-in-green-colore.json"
+            app:lottie_loop="false"
+            app:lottie_speed="1"/>
 
 
         <TextView
@@ -57,6 +62,7 @@
             style="@style/MyButtonTheme1"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:id="@+id/deliverydetails"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="30dp"
@@ -75,6 +81,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="30dp"
             android:text="Back to list"
+            android:id="@+id/backtolist"
             android:textAllCaps="false"
             android:textColor="@color/black"
             android:textSize="15dp"
@@ -103,6 +110,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_toRightOf="@id/reciver"
                 android:text=" Add Remark"
+                android:id="@+id/addmark"
                 android:textColor="@color/pink"
                 android:textStyle="bold" />
         </RelativeLayout>
