--- a/app/src/main/res/layout/activity_on_hold.xml
+++ b/app/src/main/res/layout/activity_on_hold.xml
@@ -95,7 +95,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="SGO10632060179"
+                            android:text=""
                             android:textColor="@color/white"
                             android:textStyle="bold" />
 
@@ -104,7 +104,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Blk 401 Hougang Avenue 10, #07-1164,530401"
+                            android:text=""
                             android:textColor="@color/white"
                             android:textSize="12dp" />
 
@@ -140,7 +140,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Tang Chi Cong"
+                            android:text=""
                             android:textColor="@color/black"
                             android:textSize="18dp"
                             android:textStyle="bold" />
@@ -150,7 +150,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="Tel: +6592236540"
+                            android:text=""
                             android:textColor="@color/black"
                             android:textSize="18dp"
                             android:textStyle="bold" />
@@ -239,7 +239,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="12:38 07-09-2021"
+                            android:text=""
                             android:textColor="@color/black"
                             android:textSize="18dp"
                             android:textStyle="bold" />
@@ -248,7 +248,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="12:38 08-09-2021"
+                            android:text=""
                             android:textColor="@color/black"
                             android:textSize="18dp"
                             android:textStyle="bold" />
@@ -318,7 +318,9 @@
                                 android:layout_centerVertical="true"
                                 android:src="@drawable/plus"
                                 app:tint="@color/pink" />
+
                             <TextView
+                                android:id="@+id/add"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
@@ -345,6 +347,7 @@
                     android:layout_marginBottom="20dp"
                     android:text="Update Delivery Status"
                     android:textAllCaps="false"
+                    android:id="@+id/UpdateDeliveryStatus"
                     android:textColor="@color/white"
                     app:cornerRadius="5dp" />
 
