--- a/app/src/main/res/layout/activity_select_recipienttype.xml
+++ b/app/src/main/res/layout/activity_select_recipienttype.xml
@@ -49,10 +49,14 @@
             android:textSize="14dp"
             android:textStyle="bold" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recipietnRecyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recipietnRecyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+
 
         <TextView
             android:layout_width="match_parent"
@@ -63,10 +67,27 @@
             android:textSize="14dp"
             android:textStyle="bold" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/ononeRecyclerview"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <pl.droidsonroids.gif.GifTextView
+                android:id="@+id/spin_kit"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/loder"
+                android:visibility="gone" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ononeRecyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </RelativeLayout>
+
 
 
     </LinearLayout>
