--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -90,15 +90,31 @@
         </RelativeLayout>
 
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-        <com.github.gcacace.signaturepad.views.SignaturePad
-            android:id="@+id/signature_pad"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginTop="20dp"
-            android:background="#E8ECF5"
-            app:penColor="@android:color/black"
-            />
+
+
+    <com.github.gcacace.signaturepad.views.SignaturePad
+        android:id="@+id/signature_pad"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_marginTop="20dp"
+        android:background="#E8ECF5"
+        app:penColor="@android:color/black"
+        />
+
+    <pl.droidsonroids.gif.GifTextView
+        android:id="@+id/spin_kit"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/loder"
+        android:visibility="gone"
+        />
+</RelativeLayout>
 
 
         <TextView
